<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>3.5.7</version>
    </parent>

    <groupId>it.portus.smartorder</groupId>
    <artifactId>smartorder-ms</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <name>Smart Order</name>

    <packaging>pom</packaging>

    <properties>
        <java.version>21</java.version>

        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <spring.cloud.version>2025.0.0</spring.cloud.version>
        <io.cloudevents.version>4.0.1</io.cloudevents.version>
        <openapi.generator.version>7.17.0</openapi.generator.version>
        <zenwave.version>2.2.0</zenwave.version>
        <springdoc-webmvc.version>2.8.13</springdoc-webmvc.version>
        <cloud.localstack.version>2.21.5</cloud.localstack.version>
        <scalar-webflux.version>0.5.8</scalar-webflux.version>
        <jspecify.version>1.0.0</jspecify.version>

        <org.mapstruct.version>1.6.3</org.mapstruct.version>
        <evo-inflector.version>1.3</evo-inflector.version>
        <commons-lang3.version>3.19.0</commons-lang3.version>
        <commons-collections.version>4.5.0</commons-collections.version>
        <logback.version>1.5.20</logback.version>
        <guava.version>33.5.0-jre</guava.version>
        <httpclient.version>4.5.14</httpclient.version>
        <drools.version>10.1.0</drools.version>

        <instancio.version>5.5.1</instancio.version>

        <mockito.agent.path>
            -javaagent:${settings.localRepository}${file.separator}org${file.separator}mockito${file.separator}mockito-core${file.separator}${mockito.version}${file.separator}mockito-core-${mockito.version}.jar
            -Xshare:off
        </mockito.agent.path>

        <build.helper.plugin.version>3.6.0</build.helper.plugin.version>
        <maven.dependency.plugin.version>3.8.1</maven.dependency.plugin.version>
        <maven.resources.plugin.version>3.3.1</maven.resources.plugin.version>
        <jacoco-maven-plugin.version>0.8.14</jacoco-maven-plugin.version>
        <codefilarete.jacoco.version>1.0.0</codefilarete.jacoco.version>
        <apt-maven-plugin>1.1.3</apt-maven-plugin>
    </properties>

    <modules>
        <module>gateway</module>
        <module>services</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring.cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.jspecify</groupId>
                <artifactId>jspecify</artifactId>
                <version>${jspecify.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${org.mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.atteo</groupId>
                <artifactId>evo-inflector</artifactId>
                <version>${evo-inflector.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>${commons-collections.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-core</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpclient</artifactId>
                <version>${httpclient.version}</version>
            </dependency>
            <dependency>
                <groupId>org.instancio</groupId>
                <artifactId>instancio-core</artifactId>
                <version>${instancio.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.jspecify</groupId>
            <artifactId>jspecify</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <!--
                <plugin>
                    <groupId>com.diffplug.spotless</groupId>
                    <artifactId>spotless-maven-plugin</artifactId>
                    <configuration>
                        <java>
                            <googleJavaFormat />
                        </java>
                    </configuration>
                </plugin>
                -->

                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <executions>
                        <execution>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>${maven.dependency.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>${maven.resources.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <version>${build.helper.plugin.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <argLine>@{argLine} ${mockito.agent.path}</argLine>

                        <parallel>all</parallel>
                        <threadCount>10</threadCount>
                        <forkCount>2.5C</forkCount>
                        <perCoreThreadCount>true</perCoreThreadCount>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco-maven-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>prepare-agent</id>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>report</id>
                            <phase>test</phase>
                            <goals>
                                <goal>report</goal>
                            </goals>
                        </execution>
                    </executions>

                    <configuration>
                        <excludes>
                            <exclude>**/openapi/**</exclude>
                        </excludes>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>com.mysema.maven</groupId>
                    <artifactId>apt-maven-plugin</artifactId>
                    <version>${apt-maven-plugin}</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${org.mapstruct.version}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok-mapstruct-binding</artifactId>
                            <version>0.2.0</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codefilarete</groupId>
                <artifactId>jacoco-aggregate-submodule</artifactId>
                <version>${codefilarete.jacoco.version}</version>
                <executions>
                    <execution>
                        <id>report-aggregate</id>
                        <goals>
                            <goal>report-aggregate</goal>
                        </goals>
                        <phase>verify</phase>
                    </execution>
                </executions>

                <configuration>
                    <excludes>
                        <exclude>**/openapi/**</exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>cloud</id>

            <dependencies>
                <dependency>
                    <groupId>software.amazon.awssdk</groupId>
                    <artifactId>s3</artifactId>
                    <version>${cloud.localstack.version}</version>
                </dependency>

                <dependency>
                    <groupId>software.amazon.awssdk</groupId>
                    <artifactId>dynamodb</artifactId>
                    <version>${cloud.localstack.version}</version>
                </dependency>

                <dependency>
                    <groupId>software.amazon.awssdk</groupId>
                    <artifactId>auth</artifactId>
                    <version>${cloud.localstack.version}</version>
                </dependency>
            </dependencies>
        </profile>
    </profiles>
</project>
